--- a/config.toml
+++ b/config.toml
@@ -6,22 +6,26 @@ title = "arianmonti blog"
 theme = "loveit"
 
 [params]
+  # LoveIt theme version
   version = "0.2.X"
 
 [menu]
   [[menu.main]]
     identifier = "posts"
+    # you can add extra information before the name (HTML format is supported), such as icons
     pre = ""
+    # you can add extra information after the name (HTML format is supported), such as icons
     post = ""
-    name = "پست‌ها"
+    name = "Posts"
     url = "/posts/"
+    # title will be shown when you hover on this menu link
     title = ""
     weight = 1
   [[menu.main]]
     identifier = "tags"
     pre = ""
     post = ""
-    name = "تگ‌ها"
+    name = "Tags"
     url = "/tags/"
     title = ""
     weight = 2
@@ -29,7 +33,7 @@ theme = "loveit"
     identifier = "categories"
     pre = ""
     post = ""
-    name = "موضوعات"
+    name = "Categories"
     url = "/categories/"
     title = ""
     weight = 3
