--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ theme = "loveit"
     pre = ""
     # you can add extra information after the name (HTML format is supported), such as icons
     post = ""
-    name = "Posts"
+    name = "پست‌ها"
     url = "/posts/"
     # title will be shown when you hover on this menu link
     title = ""
@@ -25,7 +25,7 @@ theme = "loveit"
     identifier = "tags"
     pre = ""
     post = ""
-    name = "Tags"
+    name = "تگ‌ها"
     url = "/tags/"
     title = ""
     weight = 2
@@ -33,7 +33,7 @@ theme = "loveit"
     identifier = "categories"
     pre = ""
     post = ""
-    name = "Categories"
+    name = "موضوعات"
     url = "/categories/"
     title = ""
     weight = 3
